# dioxus-md

./: Cargo.toml  Dioxus.toml  README.md
examples/: example.rs
src/: lib.rs
src/animation/: mod.rs
src/text_fields/: mod.rs  text_field.rs  text_field_attrs.rs
src/textfield/: mod.rs  styles.css  textfield.rs  textfield_attrs.rs
