[package]
name = "dioxus-md"
version = "0.1.0"
authors = ["wdjcodes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.2"
dioxus = { version = "0.6.0", features = [] }
dioxus-motion = { version = "0.3.1", default-features = false}

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-motion/web"]
desktop = ["dioxus/desktop", "dioxus-motion/desktop"]
mobile = ["dioxus/mobile", "dioxus-motion/desktop"]

[dev-dependencies]
lookbook = "0.1.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
